--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
-    "styled-components": "^6.0.0-rc.2"
+    "styled-components": "^5.3.11"
   }
 }
